Add docking test

--- a/simulation_ws/src/aws_robomaker_simulation_common/package.xml
+++ b/simulation_ws/src/aws_robomaker_simulation_common/package.xml
@@ -18,6 +18,10 @@
   <exec_depend>moveit_ros</exec_depend>
   <exec_depend>dwa_local_planner</exec_depend>
 
+  <depend>std_srvs</depend>
+  <depend>std_msgs</depend>
+  <depend>actionlib</depend>
+
   <export>
     <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
   </export>
