coverage test progress update

--- a/simulation_ws/src/test_nodes/CMakeLists.txt
+++ b/simulation_ws/src/test_nodes/CMakeLists.txt
@@ -45,6 +45,7 @@ catkin_package(
 ################################################################################
 catkin_install_python(PROGRAMS
   nodes/navigation_test.py
+  nodes/coverage_test.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
