Continued adding footprint to test

--- a/simulation_ws/src/test_nodes/CMakeLists.txt
+++ b/simulation_ws/src/test_nodes/CMakeLists.txt
@@ -49,7 +49,7 @@ catkin_install_python(PROGRAMS
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
-install(DIRECTORY launch
+install(DIRECTORY launch robot_footprint
 	DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
