--- a/simulation_ws/src/test_nodes/package.xml
+++ b/simulation_ws/src/test_nodes/package.xml
@@ -15,4 +15,5 @@
   <depend>aws_robomaker_simulation_ros_pkgs</depend>
   <depend>ros_monitoring_msgs</depend>
   <depend>python-numpy</depend>
+  <depend>gazebo_ros</depend>
 </package>
